--- a/yfc_test_speed.html
+++ b/yfc_test_speed.html
@@ -8,30 +8,25 @@
 <body>
 
 <div><p>
-	xscasascas
-	
-</p><p>
-	xscasascas
-	
-</p>
-<h1>Vidverto code</h1>
-
-<p>
-	xscasascas
-	
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam mauris, convallis vel ultrices id, interdum id urna. Cras ac augue ac ante fringilla suscipit. Maecenas ac blandit purus, non aliquet nunc. Aliquam orci enim, pretium scelerisque feugiat at, consectetur non quam. Ut commodo vel justo eu eleifend. Quisque nec lacus facilisis dui lacinia interdum. Donec faucibus et libero sit amet facilisis. Quisque facilisis dignissim velit quis vestibulum. Nullam in molestie ipsum. Etiam rutrum facilisis feugiat.
 </p>
       <script id="_vidverto-5418e1e559286fa1cf08c29e8728bb80">!function(v,t,o){var a=t.createElement("script");a.src="https://ad.vidverto.io/vidverto/js/aries/v1/invocation.js",a.setAttribute("fetchpriority","high");var r=v.top;r.document.head.appendChild(a),v.self!==v.top&&(v.frameElement.style.cssText="width:0px!important;height:0px!important;"),r.aries=r.aries||{},r.aries.v1=r.aries.v1||{commands:[]};var c=r.aries.v1;c.commands.push((function(){var t=v.frameElement||"#_vidverto-5418e1e559286fa1cf08c29e8728bb80";c.mount("7599",t,{width:720,height:405})}))}(window,document);</script>
-  <p>
-	xscasascas
-	
-</p><p>
-	xscasascas
-	
+<div id="lipsum">
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam mauris, convallis vel ultrices id, interdum id urna. Cras ac augue ac ante fringilla suscipit. Maecenas ac blandit purus, non aliquet nunc. Aliquam orci enim, pretium scelerisque feugiat at, consectetur non quam. Ut commodo vel justo eu eleifend. Quisque nec lacus facilisis dui lacinia interdum. Donec faucibus et libero sit amet facilisis. Quisque facilisis dignissim velit quis vestibulum. Nullam in molestie ipsum. Etiam rutrum facilisis feugiat.
 </p>
-
-<h1>Youtube video</h1>
-
-<iframe width="720" height="405" src="https://www.youtube.com/embed/bFA4dsJ2OTg?start=13" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<p>
+Integer quis faucibus dui. Nunc pretium, nulla id volutpat consequat, lectus sapien suscipit massa, et mattis metus magna nec risus. Duis nibh dolor, pulvinar et fringilla at, lobortis id nulla. Aenean commodo lacinia nisl. Cras non vulputate nulla. Donec sed enim risus. Praesent lacinia diam ut libero fringilla, vel euismod ipsum consectetur. Fusce mi dui, pharetra eu augue vitae, feugiat rhoncus sapien. Maecenas varius fermentum egestas. Vestibulum non est et eros tristique accumsan. Maecenas tempus aliquet ipsum nec condimentum. Donec ac ante id dui dignissim consectetur. Phasellus sollicitudin enim quis mauris venenatis elementum. Nullam purus quam, dapibus id mauris in, aliquet fringilla diam. Suspendisse quis nulla libero. Duis et mi tortor.
+</p>
+<p>
+Phasellus faucibus a nisl in egestas. In hac habitasse platea dictumst. Donec non pulvinar arcu, vel imperdiet risus. Maecenas malesuada tortor libero, eget vehicula neque lacinia id. Sed molestie faucibus auctor. Vivamus leo turpis, gravida et placerat sit amet, pulvinar nec ex. Phasellus tincidunt eleifend commodo. Suspendisse semper, magna fermentum venenatis luctus, neque orci placerat velit, sit amet malesuada nulla mi eget dolor. Vivamus ex quam, tempus sed dictum a, lobortis eget sem. In id tincidunt felis. Fusce sit amet molestie arcu. In aliquam porttitor elementum. Pellentesque fringilla risus vel felis ullamcorper malesuada.
+</p>
+<p>
+Donec convallis tellus ac diam pellentesque, eget efficitur risus ultrices. Proin eget nisl blandit, ullamcorper diam id, rutrum urna. Sed varius sapien eu ex fringilla interdum. Curabitur hendrerit tristique erat et suscipit. Proin blandit, augue at lacinia porttitor, orci libero interdum sapien, vel faucibus ante elit sed est. Phasellus egestas, orci eget tempus vehicula, tellus nibh luctus magna, sed placerat elit sem et elit. In lacinia pellentesque ipsum sed pulvinar. Praesent euismod accumsan varius. Nunc pulvinar elit ac ante faucibus, fringilla aliquet lorem maximus.
+</p>
+<p>
+Aenean finibus orci nec elit tempus posuere. Donec pulvinar, urna sed rhoncus aliquam, enim elit vehicula nibh, feugiat mollis augue velit sit amet eros. Proin non augue feugiat nisi feugiat pulvinar a vel justo. Morbi sed fermentum massa, vel vulputate lacus. Suspendisse tellus mauris, dictum a bibendum sit amet, finibus non orci. Ut et nunc nisl. Sed in tellus non diam ultrices posuere. Maecenas et mi ligula. Ut consequat neque et ornare rutrum. Phasellus odio elit, dignissim eget pulvinar sed, tempor semper ante.
+</p></div>
 
 <p>
 	xscasascas
