--- a/atest.html
+++ b/atest.html
@@ -15,12 +15,13 @@ var player = new VidvertoPlayer('.audio_reader', {
 		reader : {
 			code : 'ar-m6dgho8fst6', 
 			id : '4149867336', 
-		},
+		}
+	},
 	provider: 'tts',
 	lavout: 'reader',
 	media: {
-		file: '.entry-content' //put css selector here - All text inside that css will be sent
-	}
+		file: '.entry-content', //put css selector here - All text inside that css will be sent
+	},
 });
 </script>
 <div>
