--- a/atest.html
+++ b/atest.html
@@ -18,7 +18,7 @@ var player = new VidvertoPlayer('.audio_reader', {
 		}
 	},
 	provider: 'tts',
-	lavout: 'reader',
+	layout: 'reader',
 	media: {
 		file: '.entry-content', //put css selector here - All text inside that css will be sent
 	},
