--- a/atest.html
+++ b/atest.html
@@ -13,7 +13,7 @@
     </style>
     	<script type="text/javascript" src="https://outstream.video/vid-player/player.js"></script>
 
-<script type="text/javascript" src="https://opensellers.github.io/vidverto-audio.js"></script>
+<script type="text/javascript" src="https://outstream.video/vid-player/vidvertoplayer.js"></script>
 
 </head>
 <body>
