--- a/atest.html
+++ b/atest.html
@@ -138,7 +138,7 @@
             provider: 'tts',
             layout: 'reader',
             media: {
-                file: '.entry-content' //put css selector here
+                file: '.test' //put css selector here
             }
         });
 
