--- a/atest.html
+++ b/atest.html
@@ -133,6 +133,7 @@
                 reader : {
                     code : 'ar-m6dgho8fst6',
                     id : '41498673367',
+		_language: 'uk-UA',
                     //theme: 'black'
                 }
             },
