--- a/atest.html
+++ b/atest.html
@@ -132,13 +132,13 @@
             audio: {
                 reader : {
                     code : 'ar-m6dgho8fst6',
-                    id : '12',
-		_language: 'uk-UA',
+                    id : '32',
+		language: 'uk-UA',
                     //theme: 'black'
                 }
             },
             provider: 'tts',
-            layout: 'reader',
+            layout:  'audio_slim',
             media: {
                 file: '.entry-content' //put css selector here
             }
