--- a/atest.html
+++ b/atest.html
@@ -132,7 +132,7 @@
                 reader : {
                     code : 'ar-m6dgho8fst6',
                     id : '33',
-		language: 'uk-UA',
+		//language: 'uk-UA',
                     //theme: 'black'
                 }
             },
