--- a/atest.html
+++ b/atest.html
@@ -134,8 +134,8 @@
             audio: {
                 reader : {
                     code : 'ar-m6dgho8fst6',
-                    id : '33',
-		//language: 'uk-UA',
+                    id : '34',
+		language: 'uk-UA',
                     //theme: 'black'
                 }
             },
