--- a/atest.html
+++ b/atest.html
@@ -133,9 +133,9 @@
     var player = new VidvertoPlayer('.audio_reader',{
             audio: {
                 reader : {
-                    code : 'ar-m6dgho8fst6',
-                    id : '35',
-		_language: 'uk-UA',
+                    code : 'uk-m6dgho8fst6',
+                    id : '36',
+		language: 'uk-UA',
                     //theme: 'black'
                 }
             },
