Update and rename atest2.html to atest3.html

--- a/atest3.html
+++ b/atest3.html
@@ -134,10 +134,10 @@
     var player = new VidvertoPlayer('.audio_reader',{
             audio: {
                 reader : {
-                    code : 'uk-37',
-                    id : '37',
-		language: 'uk-UA',
-                    //theme: 'black'
+                    code : 'uk-38',
+                    id : '38',
+		"_language": 'uk',
+                  "theme": "light"
                 }
             },
             provider: 'tts',
