--- a/atest4.html
+++ b/atest4.html
@@ -56,5 +56,61 @@
         });
 
 </script>
+	<script type="text/javascript">
+	var player = new VidvertoPlayer('.audio_reader2',{
+	{
+    "audio": {
+        "reader": {
+            "code": "ar-mwz02budelo",
+            "id": 2415214919,
+            "_language": "Ukr",
+            "skip_selector": ".related-item, .wp-block-media-text, .post-navigation, .share-post, .clear, .robots-nocontent"
+        },
+        "theme": "light"
+    },
+    "provider": "tts",
+    "layout": "audio_slim",
+    "media": [
+        {
+            "file": ".entry-content",
+            "id": 2415214919,
+            "ads": [
+                {
+                    "id": 22221,
+                    "url": "https:\/\/pubads.g.doubleclick.net\/gampad\/ads?iu=\/22486451388,22037057170\/ca-video-pub-9219954761243535-tag\/Sweettntmagazine.com\/mow_Sweettntmagazine.com_AUDIO_PRE&description_url=[placeholder]&tfcd=0&npa=0&ad_type=audio&sz=1x1&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=",
+                    "client": "google-dfp",
+                    "time": 0,
+                    "adSource": "marketplace"
+                }
+            ]
+        }
+    ],
+    "receptivity": false,
+    "receptivity_events": [],
+    "mute": false,
+    "volume": 100,
+    "autoplay_related": {
+        "enabled": true,
+        "related_timeout": 0,
+        "timeout": 6
+    },
+    "logo": {
+        "mowplay": "https:\/\/mowplay.com\/video\/",
+        "mowplay_base_url": "https:\/\/mowplay.com\/video\/"
+    },
+    "sticky": {
+        "enabled": false,
+        "position": "left_bottom"
+    },
+    "mobile_full_width": false,
+    "ads": {
+        "forceSkipable": false,
+        "forceSkipTime": 5
+    },
+    "ad_priority": "m",
+    "responsive": true
+}
+        });
+</script>
 </body>
 </html>
