--- a/atest4.html
+++ b/atest4.html
@@ -24,7 +24,7 @@
 <p>Тарас Шевченко народився у кріпацькій сім'ї в селі Моринці Київської губернії (теперішня Черкаська обл. ). Датою народження поета вважають 9 березня 1814 року. Батько Тараса, Григорій Іванович, походить із с. Кирилівка, а мама, Катерина Якимівна Бойко, родом з с. Моринці. Одружившись, батьки Т. Шевченка, перші вісім років жили в дідовій хаті на батьківщині Григорія Івановича. Саме тут народились старші сестри поета Катерина та Марія. Так як в хаті проживало тринадцять чоловік, то сім'я прийняла рішення переїхати до с. Моринці, де вони поселилися у домі засланого до Сибіру кріпака Колесника. Саме тут народився старший брат поета Микита і Тарас. Після повернення господаря хати, у 1815 році, уся багаточисельна родина Шевченка повернулася до с. Кирилівки, де придбала хату у односельцяТетерюка. Згодом народились Ярина, Марія та Йосип. Так, як батьки Тараса тяжко працювали на панщині, доглядала малого поета сестра Катерина. Вона часто надовго залишала хлопця одного, тому що сама була ще геть малою і на думці мала самі гульки та подруг.</p>
 <p>Тарас ріс допитливим і непосидючим хлопчиною. Змалку була жага до мандрів, але перша подорож за територію села була уже з пригодами. Маленький Тарас просто заблукав і не зміг знайти дорогу додому. Допомогли хлопцю чумаки, які розпитали наляканого знайду, надвечір повернули його до села. В цей час сім'я вже вечеряла за столом. Лише одна Катерина виглядала брата, не доторкалась до їжі і все переживала де ж дівся її братик. А Тарас, втомлений, але захоплений, невпинно розказував про свої відкриття і про золоті стовпи, які тримають небо там де сходить сонце.</p>
 	</div>
-
+<div class="audio_reader2"></div>
 </div>		
 </div>
 	<script>
