--- a/atest5.html
+++ b/atest5.html
@@ -26,7 +26,7 @@
 <div class="audio_reader2"></div>
 </div>		
 </div>
-	<script type="text/javascript" src="https://cdn.mowplayer.com/dist/mowplayer.js?v=1670855829"></script>
+	<script type="text/javascript" src="https://outstream.video/vid-player/vap.js?v=1670855829"></script>
 
 	<script type="text/javascript">
 	var player = new Mowplayer('.audio_reader2',{
@@ -66,8 +66,8 @@
         "timeout": 6
     },
     "logo": {
-        "mowplay": "https:\/\/mowplay.com\/video\/",
-        "mowplay_base_url": "https:\/\/mowplay.com\/video\/"
+        "mowplay": "https:\/\/vidverto.io\/",
+        "mowplay_base_url": "https:\/\/vidverto.io\/"
     },
     "sticky": {
         "enabled": false,
