--- a/atest5.html
+++ b/atest5.html
@@ -29,7 +29,7 @@
 	<script type="text/javascript" src="https://outstream.video/vid-player/vap.js?v=1670855829"></script>
 
 	<script type="text/javascript">
-	var player = new Mowplayer('.audio_reader2',{
+	var player = new vapplayer('.audio_reader2',{
     "audio": {
         "reader": {
             "code": "ar-mwz02budelo",
