--- a/yfc_test_speed.html
+++ b/yfc_test_speed.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Test speed</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 </head>
 <body>
